--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
 <body>
     <div class="profile_card">
         <div class="image">
-            <img src="/tulu_2000.png" alt="photo" class="profile_image">
+            <img src="tulu_2000.png" alt="photo" class="profile_image">
         </div>
 
         <div class="text_data">
